--- a/index.html
+++ b/index.html
@@ -488,8 +488,7 @@
           </p>
           <p>
             Почти написала заявление на отчисление. Не хочу продолжать тратить
-            свои нервные клетки в этой пародии на обучение. Очень жалко
-            потраченного времени. После этого курса точно не возможно работать
+            свои нервные клетки в этой пародии на обучение. После этого курса точно не возможно работать
             фронтендом. Знания на нуле. Только трата денег, времени и нервов.
           </p>
         </div>
