более идеальная версия кода для идеального ревьювера

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <main class="main container">
-      <section class="cards">
+      <article class="cards">
         <h2 class="card__title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
@@ -30,8 +30,9 @@
             src="./images/edinorog.png"
             alt="Единорог скачет по радуге"
             class="card__image filter-invert"
+            loading="lazy"
           />
-          <span class="card__label">В предкушении</span>
+          <span class="card__label" aria-hidden="true">В предкушении</span>
         </div>
         <div class="card__content">
           <p>
@@ -50,8 +51,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -83,20 +85,23 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <div class="card__image-container">
           <img
             src="./images/schok.png"
             alt="Мужчина в шоке"
             class="card__image filter-saturate"
+            loading="lazy"
           />
-          <span class="card__label">Ожидание/Реальность</span>
+          <span class="card__label" aria-hidden="true"
+            >Ожидание/Реальность</span
+          >
         </div>
         <div class="card__content">
           <p>
@@ -115,8 +120,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -148,20 +154,21 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">1 спринт: А если не получится?</h2>
         <div class="card__image-container">
           <img
             src="./images/sizif.png"
             alt="мужчина закатывает камень на гору"
             class="card__image filter-multiple"
+            loading="lazy"
           />
-          <span class="card__label">Что это было?</span>
+          <span class="card__label" aria-hidden="true">Что это было?</span>
         </div>
         <div class="card__content">
           <p>
@@ -176,8 +183,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -209,20 +217,21 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <div class="card__image-container">
           <img
             src="./images/faces.png"
             alt="смешные лица"
             class="card__image filter-sepia"
+            loading="lazy"
           />
-          <span class="card__label">Насмешили</span>
+          <span class="card__label" aria-hidden="true">Насмешили</span>
         </div>
         <div class="card__content">
           <p>
@@ -239,8 +248,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -272,20 +282,21 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__image-container">
           <img
             src="./images/comanda.png"
             alt="Начало пути"
             class="card__image filter-hue-rotate"
+            loading="lazy"
           />
-          <span class="card__label">Команда</span>
+          <span class="card__label" aria-hidden="true">Команда</span>
         </div>
         <div class="card__content">
           <p>
@@ -305,8 +316,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -338,20 +350,21 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <div class="card__image-container">
           <img
             src="./images/ii.png"
             alt="ИИ решает задачи"
             class="card__image filter-brightness"
+            loading="lazy"
           />
-          <span class="card__label">Как учиться?</span>
+          <span class="card__label" aria-hidden="true">Как учиться?</span>
         </div>
         <div class="card__content">
           <p>
@@ -365,8 +378,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -398,20 +412,21 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__image-container">
           <img
             src="./images/hands.png"
             alt="Махни рукой на проблемы"
             class="card__image filter-blur"
+            loading="lazy"
           />
-          <span class="card__label">Взмах рукой</span>
+          <span class="card__label" aria-hidden="true">Взмах рукой</span>
         </div>
         <div class="card__content">
           <p>
@@ -429,8 +444,9 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -462,20 +478,21 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <section class="cards">
+      </article>
+      <article class="cards">
         <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="card__image-container">
           <img
             src="./images/ulitka.jpg"
             alt="Хокку Иссы Кобаяси Улитка"
             class="card__image filter-contrast"
+            loading="lazy"
           />
-          <span class="card__label">У подножия горы</span>
+          <span class="card__label" aria-hidden="true">У подножия горы</span>
         </div>
         <div class="card__content">
           <p>
@@ -488,13 +505,16 @@
           </p>
           <p>
             Почти написала заявление на отчисление. Не хочу продолжать тратить
-            свои нервные клетки в этой пародии на обучение. После этого курса точно не возможно работать
-            фронтендом. Знания на нуле. Только трата денег, времени и нервов.
+            свои нервные клетки в этой пародии на обучение. После этого курса
+            точно не возможно работать фронтендом. Знания на нуле. Только трата
+            денег, времени и нервов. Еще и ревьюверы трепят нервы своими комментариями 
+            "Всё отлично! Всё работает! Но ты переделай. Почерк у тебя некрасивый. Я вот лучше умею писать!".
           </p>
         </div>
         <div class="card__footer">
-          <button class="card__icon-button" aria-label="Лайк">
+          <button class="button card__icon-button" aria-label="Лайк" type="button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -526,16 +546,17 @@
               />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
-      </section>
-      <button onclick="window['dialog'].showModal()" class="save-button">
-        <svg
-          class="save-button__icon"
-          viewBox="0 0 21 21"
-        >
+      </article>
+      <button
+        onclick="window['dialog'].showModal()"
+        class=" button save-button"
+        type="button"
+      >
+        <svg class="save-button__icon" viewBox="0 0 21 21">
           <use href="svg/floppy.svg#floppy" />
         </svg>
         <span class="button__text">Сохранить на память</span>
@@ -543,19 +564,15 @@
     </main>
     <dialog id="dialog" class="dialog">
       <div class="dialog__content">
-        <svg
-          class="save-button__icon dialog__icon"
-          viewBox="0 0 21 21"
-        >
+        <svg class="save-button__icon dialog__icon" viewBox="0 0 21 21">
           <use href="svg/floppy.svg#floppy" />
         </svg>
-        <p class="dialog__text">
-          Вставьте <br />дискету, чтобы<br />продолжить
-        </p>
+        <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
       <button
         onclick="window['dialog'].close()"
-        class="dialog__button ok-button"
+        class=" button dialog__button ok-button"
+        type="button"
       >
         <span class="button__text">ОК</span>
       </button>
