--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -120,7 +124,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -183,7 +191,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -248,7 +260,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -316,7 +332,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -378,7 +398,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -444,7 +468,11 @@
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -507,12 +535,17 @@
             Почти написала заявление на отчисление. Не хочу продолжать тратить
             свои нервные клетки в этой пародии на обучение. После этого курса
             точно не возможно работать фронтендом. Знания на нуле. Только трата
-            денег, времени и нервов. Еще и ревьюверы трепят нервы своими комментариями 
-            "Всё отлично! Всё работает! Но ты переделай. Почерк у тебя некрасивый. Я вот лучше умею писать!".
+            денег, времени и нервов. Еще и ревьюверы трепят нервы своими
+            комментариями "Всё отлично! Всё работает! Но ты переделай. Почерк у
+            тебя некрасивый. Я вот лучше умею писать!".
           </p>
         </div>
         <div class="card__footer">
-          <button class="button card__icon-button" aria-label="Лайк" type="button">
+          <button
+            class="button card__icon-button"
+            aria-label="Лайк"
+            type="button"
+          >
             <svg
               aria-hidden="true"
               class="like-icon"
@@ -553,7 +586,7 @@
       </article>
       <button
         onclick="window['dialog'].showModal()"
-        class=" button save-button"
+        class="button save-button"
         type="button"
       >
         <svg class="save-button__icon" viewBox="0 0 21 21">
@@ -571,7 +604,7 @@
       </div>
       <button
         onclick="window['dialog'].close()"
-        class=" button dialog__button ok-button"
+        class="button dialog__button ok-button"
         type="button"
       >
         <span class="button__text">ОК</span>
